# DFSMN_Onnx

./: CMakeLists.txt  LICENSE  README.md
include/: all.h  inference.h  model.h  paraformer.h
src/: CMakeLists.txt  model.cpp  paraformer.cpp
